[tool.poetry]
name = "tilkal"
version = "0.1.0"
description = ""
authors = ["Raoul Happy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = ">=1.1,<2.0"
ipykernel = "^6.29.3"
dataprep = "^0.4.5"
pandas-profiling = {extras = ["notebook"], version = "^3.6.6"}
autoviz = "^0.1.806"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
